<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2007 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
  
          http://www.apache.org/licenses/LICENSE-2.0
  
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!-- Strings for Dialog yes button -->
    <string name="yes">"Yes"</string>

    <!-- Strings for Dialog no button -->
    <string name="no">"No"</string>
    
    <!-- Main Settings for "Ethernet" -->
    <string name="ethernet_settings_title">Ethernet</string>
    <string name="ethernet_devices">Ethernet Devices: </string>
    <string name="ethernet_connection_type">Connection Type</string>
    <string name="ethernet_dhcp">Dhcp</string>
    <string name="ethernet_static_ip">Static IP</string>
    <string name="ethernet_ip_address">IP address</string>
    <string name="ethernet_netmask">Netmask</string>
    <string name="ethernet_gateway">Gateway</string>
    <string name="ethernet_dns_address">DNS address</string>

    <string name="app_name">Ethernet</string>
    <string name="SaveBtn">Save</string>
    <string name="CancelBtn">Cancel</string>
    <string name="spinner_prompt">Choose an ethernet device</string>

	<!-- Ethernet configuration dialog -->

	<string name="eth_config_title">Configure Ethernet device</string>
	<string name="eth_setting">Ethernet setting</string>
	<string name="eth_dev_list">Ethernet Devices:</string>
	<string name="eth_con_type">Connection Type</string>
	<string name="eth_con_type_dhcp">Dhcp</string>
	<string name="eth_con_type_manual">Static IP</string>
	<string name="eth_dns">DNS address</string>
	<string name="eth_gw">Default Router</string>
	<string name="eth_ipaddr">IP address</string>
	<string name="eth_quick_toggle_title">Ethernet</string>
	<string name="eth_quick_toggle_summary">Turn on Ethernet</string>
	<string name="eth_conf_save">Save</string>
	<string name="eth_conf_cancel">Cancel</string>
	<string name="eth_radio_ctrl_title">Ethernet configuration</string>
	<string name="eth_radio_ctrl_summary">Configure Ethernet devices</string>
	<string name="eth_conf_perf_title">Ethernet configuration</string>
	<string name="eth_conf_summary">Configure Ethernet devices</string>
	<string name="eth_mask">Netmask</string>
	<string name="eth_toggle_summary_off">Turn off Ethernet</string>
	<string name="eth_toggle_summary_on">Turn on Ethernet</string>
</resources>
